[package]
name = "dos_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.2"
ic-cdk = {version="0.6.8", features=["timers"]} 
ic-cdk-macros = "0.6.8"
regex = "1.6.0"

